Corregir importación de deuda y mejorar modal de carga